<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logoo"
        tools:context=".LoginActivity">

        <androidx.cardview.widget.CardView

            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:cardCornerRadius="16dp"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.LinearLayoutCompat

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_page"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textSize="16sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/passreset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/forgot_password"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/don_t_have_a_account_sign_up"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="50dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/google" />

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="61dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/fb" />

            <ImageView
                android:id="@+id/Twitter"
                android:layout_width="58dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/google" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>