<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logoo"
        tools:context=".SignUpActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:cardCornerRadius="16dp"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.LinearLayoutCompat

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

                <EditText
                    android:id="@+id/enter_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:textSize="20sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

                <EditText
                    android:id="@+id/enter_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_enter_password" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="24dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_up"
                    android:textSize="16sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/alreadyAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/already_have_an_account_login"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView1">

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="50dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/google" />

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="61dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/fb" />

            <ImageView
                android:id="@+id/Twitter"
                android:layout_width="58dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/google" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>