<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logoo"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:contentPadding="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cardViewButtons">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Welcome to Re-Wear"
                    android:textAlignment="center"
                    android:textStyle="bold|italic"
                    android:textSize="32sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_marginHorizontal="32dp"
            app:contentPadding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with_email"
                    android:background="@drawable/selectors" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_signUp_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_with_email"
                    android:background="@drawable/selectors" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with_google"
                    android:background="@drawable/selectors" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with_facebook"
                    android:background="@drawable/selectors" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
